Guiced EE Migration to its own space